--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="theme-color" content="#ff4500">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="website icon" type="png" href="Edge-mart web icon.png" />
     <link
